Fixed background on mobile devices

--- a/StronkaBITEHack/src/styles/global.css
+++ b/StronkaBITEHack/src/styles/global.css
@@ -47,6 +47,7 @@ body {
 .layer img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
     transform: scale(1.1);
 }
 
@@ -269,6 +270,7 @@ aside ul li .active {
     .layer {
         width: 93vw;
         height: 100%;
+        /*transform: scale(1.2)*/
 
         /*display: none;*/
     }
